fixed issue with nav bar indexed behind all images

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
   position: fixed;
   opacity: 0.8;
   padding: 0 !important;
+  z-index: 1;
 }
 
 a {
